source/stylesheets/modules/_mosaic-block.scss
$mosaic-gutter: 40px;

.mosaic-block__container {
  display: flex;

  > :first-child {
    margin-right: $mosaic-gutter;
  }
}

.mosaic-block__container--constrained {
  max-width: 900px;
  margin: 0 auto;
}

.mosaic-block__column {
  display: flex;
  flex-direction: column;
}

.mosaic-block__column--small {
  flex-shrink: 1;
}

.mosaic-block__column--centered {
  justify-content: center;
}

.mosaic-block__row {
  display: flex;
  justify-content: center;

  & > * + * {
    margin-bottom: $mosaic-gutter;
    margin-left: 3em;
  }

  &--centered {
    @extend .mosaic-block__row;
    align-items: center;
  }
}

.mosaic-block__content {
  max-width: 75%;

  &--centered {
    @extend .mosaic-block__content;
    margin: 0 auto;
  }
}

.mosaic-block__content--small {
  max-width: 25%;
  flex-shrink: 0;
}

.mosaic-block__row--left {
  justify-content: flex-start;
}

.mosaic-image {
  max-height: 100%;
  max-width: 100%;
}

.mosaic-image--left-gutter {
  margin-left: $mosaic-gutter;
}

.mosaic-image--top-gutter {
  margin-top: $mosaic-gutter;
}

.mosaic-image--bottom-gutter {
  margin-bottom: $mosaic-gutter;
}

.mosaic-image--small {
  width: 50%;
}

.mosaic-image--large {
  width: 100%;
}

.image-container--small {
  width: 25%;
  height: auto;
}

.image-container--medium {
  width: 50%;
}

